cmake_minimum_required(VERSION 3.16)
project(acmcpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(acmcpp main.cpp)
add_executable(1000 1000.cpp)
add_executable(2741 2741.cpp)
add_executable(2742 2742.cpp)
add_executable(8393 8393.cpp)
add_executable(9498 9498.cpp)
add_executable(5988 5988.cpp)
add_executable(13752 13752.cpp)
add_executable(2562 2562.cpp)
add_executable(10886 10886.cpp)
add_executable(2739 2739.cpp)
add_executable(10987 10987.cpp)
add_executable(2438 2438.cpp)
add_executable(2439 2439.cpp)
add_executable(2440 2440.cpp)
add_executable(2441 2441.cpp)
add_executable(2609 2609.cpp)
add_executable(10872 10872.cpp)
add_executable(10817 10817.cpp)
add_executable(2884 2884.cpp)
add_executable(2752 2752.cpp)
add_executable(10101 10101.cpp)
add_executable(1330 1330.cpp)
add_executable(16430 16430.cpp)
add_executable(2920 2920.cpp)
add_executable(10871 10871.cpp)
add_executable(9095 9095.cpp)
add_executable(12101 12101.cpp)
add_executable(12101-2 12101-2.cpp)
add_executable(15988 15988.cpp)
add_executable(15989 15989.cpp)
add_executable(15991 15991.cpp)
add_executable(2309 2309.cpp)
add_executable(2231 2231.cpp)
add_executable(4796 4796.cpp)
add_executable(1449 1449.cpp)
add_executable(11047 11047.cpp)
add_executable(2557 2557.cpp)
add_executable(1001 1001.cpp)
add_executable(1008 1008.cpp)
add_executable(1463 1463.cpp)
add_executable(test test.cpp)
add_executable(10869 10869.cpp)
add_executable(10998 10998.cpp)
add_executable(10430 10430.cpp)
add_executable(1929 1929.cpp)
add_executable(1237 1237.cpp)
add_executable(11942 11942.cpp)
add_executable(2436 2436.cpp)
add_executable(10818 10818.cpp)
add_executable(2501 2501.cpp)
add_executable(9653 9653.cpp)
add_executable(1152 1152.cpp)
add_executable(7287 7287.cpp)
add_executable(2588 2588.cpp)
add_executable(10699 10699.cpp)
add_executable(2558 2558.cpp)
add_executable(10950 10950.cpp)
add_executable(10951 10951.cpp)
add_executable(10952 10952.cpp)
add_executable(10953 10953.cpp)
add_executable(11021 11021.cpp)
add_executable(11022 11022.cpp)
add_executable(15740 15740.cpp)
add_executable(15792 15792.cpp)
add_executable(1546 1546.cpp)
add_executable(1978 1978.cpp)
add_executable(15552 15552.cpp)
add_executable(1371 1371.cpp)
add_executable(2902 2902.cpp)
add_executable(2857 2857.cpp)
add_executable(3058 3058.cpp)
add_executable(3059 3059.cpp)
add_executable(2455 2455.cpp)
add_executable(2566 2566.cpp)
add_executable(2675 2675.cpp)
add_executable(3184 3184.cpp)
add_executable(3449 3449.cpp)
add_executable(5656 5656.cpp)
add_executable(10845 10845.cpp)