cmake_minimum_required(VERSION 3.16)
project(acmcpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(acmcpp main.cpp)
add_executable(1000 1000.cpp)
add_executable(2741 2741.cpp)
add_executable(2742 2742.cpp)
add_executable(8393 8393.cpp)
add_executable(9498 9498.cpp)
add_executable(5988 5988.cpp)
add_executable(13752 13752.cpp)
add_executable(2562 2562.cpp)
add_executable(10886 10886.cpp)
add_executable(2739 2739.cpp)
add_executable(10987 10987.cpp)
add_executable(2438 2438.cpp)
add_executable(2439 2439.cpp)
add_executable(2440 2440.cpp)
add_executable(2441 2441.cpp)
add_executable(2609 2609.cpp)
add_executable(10872 10872.cpp)
add_executable(10817 10817.cpp)
add_executable(2884 2884.cpp)
add_executable(2752 2752.cpp)
add_executable(10101 10101.cpp)
add_executable(1330 1330.cpp)
add_executable(16430 16430.cpp)
add_executable(2920 2920.cpp)
add_executable(10871 10871.cpp)
add_executable(9095 9095.cpp)
add_executable(12101 12101.cpp)
add_executable(12101-2 12101-2.cpp)
add_executable(15988 15988.cpp)
add_executable(15989 15989.cpp)
add_executable(15991 15991.cpp)
add_executable(2309 2309.cpp)
add_executable(2231 2231.cpp)
add_executable(4796 4796.cpp)
add_executable(1449 1449.cpp)
add_executable(11047 11047.cpp)
add_executable(2557 2557.cpp)
add_executable(1001 1001.cpp)
add_executable(1008 1008.cpp)
add_executable(1463 1463.cpp)
add_executable(test test.cpp)
add_executable(10869 10869.cpp)
add_executable(10998 10998.cpp)
add_executable(10430 10430.cpp)
add_executable(1929 1929.cpp)
add_executable(1237 1237.cpp)
add_executable(11942 11942.cpp)
add_executable(2436 2436.cpp)
add_executable(10818 10818.cpp)
add_executable(2501 2501.cpp)
add_executable(9653 9653.cpp)
add_executable(1152 1152.cpp)
add_executable(7287 7287.cpp)
add_executable(2588 2588.cpp)
add_executable(10699 10699.cpp)
add_executable(2558 2558.cpp)
add_executable(10950 10950.cpp)
add_executable(10951 10951.cpp)
add_executable(10952 10952.cpp)
add_executable(10953 10953.cpp)
add_executable(11021 11021.cpp)
add_executable(11022 11022.cpp)
add_executable(15740 15740.cpp)
add_executable(15792 15792.cpp)
add_executable(1546 1546.cpp)
add_executable(1978 1978.cpp)
add_executable(15552 15552.cpp)
add_executable(1371 1371.cpp)
add_executable(2902 2902.cpp)
add_executable(2857 2857.cpp)
add_executable(3058 3058.cpp)
add_executable(3059 3059.cpp)
add_executable(2455 2455.cpp)
add_executable(2566 2566.cpp)
add_executable(2675 2675.cpp)
add_executable(3184 3184.cpp)
add_executable(3449 3449.cpp)
add_executable(5656 5656.cpp)
add_executable(10845 10845.cpp)
add_executable(15353 15353.cpp)
add_executable(10828 10828.cpp)
add_executable(2422 2422.cpp)
add_executable(2744 2744.cpp)
add_executable(2460 2460.cpp)
add_executable(5354 5354.cpp)
add_executable(10814 10814.cpp)
add_executable(12789 12789.cpp)
add_executable(14720 14720.cpp)
add_executable(15649 15649.cpp)
add_executable(15650 15650.cpp)
add_executable(15651 15651.cpp)
add_executable(15652 15652.cpp)
add_executable(15654 15654.cpp)
add_executable(15655 15655.cpp)
add_executable(15656 15656.cpp)
add_executable(15657 15657.cpp)
add_executable(15663 15663.cpp)
add_executable(15664 15664.cpp)
add_executable(15665 15665.cpp)
add_executable(15666 15666.cpp)
add_executable(1977 1977.cpp)
add_executable(11098 11098.cpp)
add_executable(5635 5635.cpp)
add_executable(1408 1408.cpp)
add_executable(2748 2748.cpp)
add_executable(5565 5565.cpp)
add_executable(10984 10984.cpp)
add_executable(10833 10833.cpp)
add_executable(1292 1292.cpp)
add_executable(2822 2822.cpp)
add_executable(9325 9325.cpp)
add_executable(2750 2750.cpp)
add_executable(5522 5522.cpp)
add_executable(10178 10178.cpp)
add_executable(1037 1037.cpp)
add_executable(9295 9295.cpp)
add_executable(1427 1427.cpp)
add_executable(10569 10569.cpp)
add_executable(2475 2475.cpp)
add_executable(2576 2576.cpp)
add_executable(2953 2953.cpp)
add_executable(10807 10807.cpp)
add_executable(2693 2693.cpp)
add_executable(10773 10773.cpp)
add_executable(5800 5800.cpp)
add_executable(5054 5054.cpp)
add_executable(11170 11170.cpp)
add_executable(11170-2 11170-2.cpp)
add_executable(11650 11650.c)
add_executable(11651 11651.c)
add_executable(5543 5543.c)
add_executable(9076 9076.c)
add_executable(5176 5176.c)
add_executable(10870 10870.c)
add_executable(5576 5576.c)
add_executable(2743 2743.c)
add_executable(4458 4458.c)
add_executable(10821 10821.c)
add_executable(10808 10808.c)
add_executable(5218 5218.c)
add_executable(9086 9086.c)
add_executable(11365 11365.cpp)
add_executable(11655 11655.cpp)
add_executable(11718 11718.cpp)
add_executable(11719 11719.cpp)
add_executable(10820 10820.cpp)
add_executable(10173 10173.cpp)
add_executable(5596 5596.cpp)
add_executable(9243 9243.cpp)
add_executable(10866 10866.cpp)
add_executable(1032 1032.cpp)
add_executable(3003 3003.cpp)
add_executable(4999 4999.cpp)
add_executable(11575 11575.cpp)
add_executable(11575-2 11575-2.cpp)
add_executable(5586 5586.cpp)
add_executable(10926 10926.cpp)
add_executable(2420 2420.cpp)
add_executable(2484 2484.cpp)
add_executable(2789 2789.cpp)
add_executable(4470 4470.cpp)
add_executable(5523 5523.cpp)
add_executable(4493 4493.cpp)
add_executable(10801 10801.cpp)
add_executable(10768 10768.cpp)
add_executable(5524 5524.cpp)
add_executable(11656 11656.cpp)